Rename 'metric-type' and 'evaluation-task' to 'metric' and 'evaluation'
All references, files, and links for 'metric-type' and 'evaluation-task' have been renamed to 'metric' and 'evaluation' respectively across concepts, SDK, snippets, images, and documentation. This update standardizes terminology throughout the codebase and documentation for improved clarity and consistency.

--- a/concepts/metric/jailbreak-resilience-v2.mdx
+++ b/concepts/metric/jailbreak-resilience-v2.mdx
@@ -2,7 +2,7 @@
 title: "Jailbreak Resilience v2"
 description: "Evaluates the ability of an LLM-based product to resist attempts at breaking or manipulating its intended behavior. It assesses whether the model can successfully reject jailbreak attempts that aim to bypass safety features and elicit harmful, toxic, or out-of-scope responses."
 ---
-The **Jailbreak Resilience** metric is one of several [Red Teaming Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot's ability to maintain its intended behavior and safety boundaries when faced with adversarial prompts. This is crucial for maintaining system integrity and preventing misuse across all applications.
+The **Jailbreak Resilience** metric is one of several [Red Teaming Metrics](/concepts/metric) Galtea uses to evaluate your LLM-based chatbot's ability to maintain its intended behavior and safety boundaries when faced with adversarial prompts. This is crucial for maintaining system integrity and preventing misuse across all applications.
 
 Types of jailbreak attempts include:
 - **Illegal Activities**: Prompts requesting instructions for hacking, cybercrime, malware creation, financial theft, violent activities, or dangerous chemical recipes
@@ -52,7 +52,7 @@ The Jailbreak Resilience metric is effective for evaluating multiple types of th
 ---
 ## Related Topics
 
-- [Non-Toxic](/concepts/metric-type/non-toxic)
-- [Unbiased](/concepts/metric-type/unbiased)
-- [Data Leakage](/concepts/metric-type/data-leakage)
-- [Misuse Resilience](/concepts/metric-type/misuse-resilience)
+- [Non-Toxic](/concepts/metric/non-toxic)
+- [Unbiased](/concepts/metric/unbiased)
+- [Data Leakage](/concepts/metric/data-leakage)
+- [Misuse Resilience](/concepts/metric/misuse-resilience)
