--- a/concepts/product/test/scenario-tests.mdx
+++ b/concepts/product/test/scenario-tests.mdx
@@ -193,7 +193,7 @@ Scenarios are specifically designed to work with Galtea's [Conversation Simulato
 1. **Initialize the conversation** using the `initial_prompt` and `user_persona`
 2. **Generate realistic user responses** based on the `goal` and conversation history  
 3. **Continue the dialogue** until one of the `stopping_criterias` is met or `max_iterations` is reached
-4. **Evaluate the conversation** using your selected [metrics](/concepts/metric-type) to assess performance
+4. **Evaluate the conversation** using your selected [metrics](/concepts/metric) to assess performance
 
 For detailed implementation examples, see the [Conversation Simulator Tutorial](/sdk/tutorials/simulating-conversations).
 
