--- a/sdk/api/evaluation/create.mdx
+++ b/sdk/api/evaluation/create.mdx
@@ -6,7 +6,7 @@ description: "Create evaluation tasks for all inference results within a session
 This method evaluates an entire conversation stored in a [Session](/concepts/product/version/session) by creating evaluation tasks for each of its [Inference Results](/concepts/product/version/session/inference-result).
 
 ## Returns
-Returns a list of [EvaluationTask](/concepts/product/version/session/evaluation-task) objects, one for each metric and each inference result in the session.
+Returns a list of [Evaluation](/concepts/product/version/session/evaluation) objects, one for each metric and each inference result in the session.
 
 
 ## Example
