--- a/sdk/api/evaluation/list.mdx
+++ b/sdk/api/evaluation/list.mdx
@@ -5,7 +5,7 @@ description: "List all evaluation tasks associated with a specific session."
 
 
 ## Returns
-Returns a list of [EvaluationTask](/concepts/product/version/session/evaluation-task) objects.
+Returns a list of [Evaluation](/concepts/product/version/session/evaluation) objects.
 
 ## Example
 ```python
