--- a/sdk/api/metrics/create.mdx
+++ b/sdk/api/metrics/create.mdx
@@ -5,7 +5,7 @@ description: "Create a metric type for evaluating your products."
 
 ## Returns
 
-Returns a [MetricType](/concepts/metric-type) object for the given parameters, or `None` if an error occurs.
+Returns a [Metric](/concepts/metric) object for the given parameters, or `None` if an error occurs.
 
 ## Examples
 
