--- a/sdk/api/metrics/service.mdx
+++ b/sdk/api/metrics/service.mdx
@@ -3,9 +3,9 @@ title: 'Metrics Service'
 description: "Metrics Service API methods in the Galtea SDK"
 ---
 
-import MetricTypeCard from '/snippets/cards/metric-type-card.mdx';
+import MetricCard from '/snippets/cards/metric-card.mdx';
 
-The Metrics Service in the Galtea SDK allows you to manage [metric types](/concepts/metric-type) for evaluating your products.
+The Metrics Service in the Galtea SDK allows you to manage [metrics](/concepts/metric) for evaluating your products.
 This Service is exposed by the `galtea.metrics` object.
 
 <Info>
@@ -21,4 +21,4 @@ This Service is exposed by the `galtea.metrics` object.
 
 ## Related Concepts
 
-<MetricTypeCard />
+<MetricCard />
