--- a/sdk/tutorials/create-test.mdx
+++ b/sdk/tutorials/create-test.mdx
@@ -83,7 +83,7 @@ The Galtea SDK provides methods to create both [Quality Tests](/concepts/product
 ## Next Steps
 
 <CardGroup cols={2}>
-  <Card title="Run Test-Based Evaluation Tasks" icon="badge-check" href="/sdk/tutorials/create-evaluation-task">
+  <Card title="Run Test-Based Evaluations" icon="badge-check" href="/sdk/tutorials/create-evaluation">
     Run your test against a specific product version.
   </Card>
   <Card title="API Reference" icon="code" href="/sdk/api/test/service">
