--- a/snippets/changelog/2025-05-19.mdx
+++ b/snippets/changelog/2025-05-19.mdx
@@ -2,7 +2,7 @@
 
 ## Streamlined Onboarding and Quicker Starts
 
-We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default [Metric](/concepts/metric-type) and a default [Test](/concepts/product/test). This makes it easier than ever to get started with Galtea and run your first evaluation quickly.
+We've revamped the platform onboarding! It's now more visually intuitive and to help new users get evaluating in no time, we now provide a default [Metric](/concepts/metric) and a default [Test](/concepts/product/test). This makes it easier than ever to get started with Galtea and run your first evaluation quickly.
 
 ## Deeper Insights with Visible Conversation Turns
 
