--- a/snippets/changelog/2025-06-23.mdx
+++ b/snippets/changelog/2025-06-23.mdx
@@ -5,7 +5,7 @@ You can now create Quality Tests directly from your own examples using the new *
 
 ## Metric Type Tags
 
-[Metric Types](/concepts/metric-type) now support **tags** for easier classification and discovery. Quickly find and organize metrics relevant to your projects. [See all metric types](/concepts/metric-type).
+[Metrics](/concepts/metric) now support **tags** for easier classification and discovery. Quickly find and organize metrics relevant to your projects. [See all metrics](/concepts/metric).
 
 ## Enhanced Product Details
 
