--- a/snippets/changelog/2025-07-07.mdx
+++ b/snippets/changelog/2025-07-07.mdx
@@ -12,7 +12,7 @@ We've expanded our arsenal of [Red Teaming Strategies](/concepts/product/test/re
 
 ## Introducing the Misuse Resilience Metric
 
-A new [non-deterministic metric](/concepts/metric-type), **[Misuse Resilience](/concepts/metric-type/misuse-resilience)**, is now available. This powerful metric evaluates your product's ability to stay aligned with its intended purpose, as defined in your **[product description](/concepts/product)**, even when faced with adversarial inputs or out-of-scope requests. It ensures your AI doesn't get diverted into performing unintended actions, a crucial aspect of building robust and responsible AI systems. Learn more in the [full documentation](/concepts/metric-type/misuse-resilience).
+A new [non-deterministic metric](/concepts/metric), **[Misuse Resilience](/concepts/metric/misuse-resilience)**, is now available. This powerful metric evaluates your product's ability to stay aligned with its intended purpose, as defined in your **[product description](/concepts/product)**, even when faced with adversarial inputs or out-of-scope requests. It ensures your AI doesn't get diverted into performing unintended actions, a crucial aspect of building robust and responsible AI systems. Learn more in the [full documentation](/concepts/metric/misuse-resilience).
 
 ## Enhanced Test Case Management: Mark as Reviewed
 
