--- a/snippets/changelog/2025-07-28.mdx
+++ b/snippets/changelog/2025-07-28.mdx
@@ -7,7 +7,7 @@ We've added support for more evaluator models to enhance your evaluation capabil
 - **Gemini-2.5-Flash-Lite**: A lightweight variant offering faster processing with efficient resource usage  
 - **Gemini-2.0-Flash**: Google's established model providing reliable evaluation performance
 
-You can now [link these models to specific Metric Types](/concepts/metric-type) for consistent evaluation results and leverage specialized models for different evaluation scenarios. Learn more about configuring evaluator models in our [SDK documentation](/sdk/api/metrics).
+You can now [link these models to specific Metrics](/concepts/metric) for consistent evaluation results and leverage specialized models for different evaluation scenarios. Learn more about configuring evaluator models in our [SDK documentation](/sdk/api/metrics).
 
 ## Enhanced Conversation Simulation
 
@@ -23,17 +23,17 @@ These enhancements work seamlessly with our [Conversation Simulator](/concepts/p
 
 We've expanded our metric library with three essential deterministic metrics for precise text evaluation:
 
-- **[BLEU](/concepts/metric-type/bleu)**: Measures n-gram overlap between generated and reference text, ideal for machine translation and constrained generation tasks.
+- **[BLEU](/concepts/metric/bleu)**: Measures n-gram overlap between generated and reference text, ideal for machine translation and constrained generation tasks.
 
-- **[ROUGE](/concepts/metric-type/rouge)**: Evaluates summarization quality by measuring the longest common subsequence between candidate and reference summaries.
+- **[ROUGE](/concepts/metric/rouge)**: Evaluates summarization quality by measuring the longest common subsequence between candidate and reference summaries.
 
-- **[METEOR](/concepts/metric-type/meteor)**: Assesses translation and paraphrasing by aligning words using exact matches, stems, and synonyms for more nuanced evaluation.
+- **[METEOR](/concepts/metric/meteor)**: Assesses translation and paraphrasing by aligning words using exact matches, stems, and synonyms for more nuanced evaluation.
 
 These classic metrics complement our existing evaluation suite and are perfect for scenarios requiring deterministic, rule-based scoring.
 
 ## Enhanced Red Teaming with Jailbreak Resilience v2
 
-Security testing gets an upgrade with **[Jailbreak Resilience v2](/concepts/metric-type/jailbreak-resilience-v2)**, an improved version of our jailbreak resistance metric. This enhanced evaluation provides more comprehensive assessment of your model's ability to resist adversarial prompts and maintain safety boundaries across various attack vectors.
+Security testing gets an upgrade with **[Jailbreak Resilience v2](/concepts/metric/jailbreak-resilience-v2)**, an improved version of our jailbreak resistance metric. This enhanced evaluation provides more comprehensive assessment of your model's ability to resist adversarial prompts and maintain safety boundaries across various attack vectors.
 
 ## Dashboard Redesign: First Iteration
 
