--- a/snippets/changelog/2025-09-15.mdx
+++ b/snippets/changelog/2025-09-15.mdx
@@ -5,11 +5,11 @@ We're introducing confidence scores for all generated [Test Cases](/concepts/pro
 
 ## Simplified and More Flexible Metric Creation
 
-Creating [Metric Types](/concepts/metric-type) is now more intuitive and flexible. Metrics are now directly linked to a specific `test_type` (`QUALITY`, `RED_TEAMING`, or `SCENARIOS`), which simplifies the creation process by tailoring the available parameters to the relevant test category. This change makes it easier to define metrics that are perfectly aligned with your evaluation goals. See the updated [creation guide](/sdk/api/metrics/create) for more details.
+Creating [Metrics](/concepts/metric) is now more intuitive and flexible. Metrics are now directly linked to a specific `test_type` (`QUALITY`, `RED_TEAMING`, or `SCENARIOS`), which simplifies the creation process by tailoring the available parameters to the relevant test category. This change makes it easier to define metrics that are perfectly aligned with your evaluation goals. See the updated [creation guide](/sdk/api/metrics/create) for more details.
 
 ## Custom Judges for Conversational Evaluation
 
-You can now create your own **[Custom Judges](/concepts/metric-type/custom-judge)** specifically for evaluating multi-turn conversations. This powerful feature allows you to define complex, stateful evaluation logic that assesses the entire dialogue, enabling you to measure nuanced aspects like task completion, context retention, and persona adherence across multiple turns. Learn more in our guide to [evaluating conversations](/sdk/tutorials/evaluating-conversations).
+You can now create your own **[Custom Judges](/concepts/metric/custom-judge)** specifically for evaluating multi-turn conversations. This powerful feature allows you to define complex, stateful evaluation logic that assesses the entire dialogue, enabling you to measure nuanced aspects like task completion, context retention, and persona adherence across multiple turns. Learn more in our guide to [evaluating conversations](/sdk/tutorials/evaluating-conversations).
 
 ## Conversation Simulator Enhancements
 
