--- a/snippets/changelog/2025-09-22.mdx
+++ b/snippets/changelog/2025-09-22.mdx
@@ -1,10 +1,10 @@
 <Update label="2025-09-22" description="Consistent Sorting, Improved Navigation, and SAML SSO">
 ## Consistent Sorting and Enhanced Navigation
 
-We've made significant usability improvements to the platform. Table sorting is now more consistent and persistent; you can navigate away, refresh the page, and your chosen sort order will remain, ensuring a smoother workflow. Additionally, navigating from an [Evaluation Task](/concepts/product/version/session/evaluation-task) is easier than ever. You can now right-click on any task in the table or use the dropdown menu in the details page to jump directly to the related [Test Case](/concepts/product/test/case) or [Session](/concepts/product/version/session).
+We've made significant usability improvements to the platform. Table sorting is now more consistent and persistent; you can navigate away, refresh the page, and your chosen sort order will remain, ensuring a smoother workflow. Additionally, navigating from an [Evaluation](/concepts/product/version/session/evaluation) is easier than ever. You can now right-click on any task in the table or use the dropdown menu in the details page to jump directly to the related [Test Case](/concepts/product/test/case) or [Session](/concepts/product/version/session).
 
 <Frame>
-  <img src="/images/changelog/2025-09-22_evaluation-task-navigation.png" alt="Right-click navigation from the Evaluation Task table" />
+  <img src="/images/changelog/2025-09-22_evaluation-navigation.png" alt="Right-click navigation from the Evaluation table" />
 </Frame>
 
 ## Upvote and Downvote Test Cases
@@ -21,7 +21,7 @@ Organizations can now enhance their security by configuring SAML SSO for authent
 
 ## Improved Misuse Resilience Metric
 
-The **[Misuse Resilience](/concepts/metric-type/misuse-resilience)** metric has been enhanced to accept the full product context. This allows for a more accurate and comprehensive evaluation of your model's ability to resist misuse by leveraging a deeper understanding of your product's intended capabilities and boundaries.
+The **[Misuse Resilience](/concepts/metric/misuse-resilience)** metric has been enhanced to accept the full product context. This allows for a more accurate and comprehensive evaluation of your model's ability to resist misuse by leveraging a deeper understanding of your product's intended capabilities and boundaries.
 
 ## New Analytics Filter
 
