--- a/concepts/metric/data-leakage.mdx
+++ b/concepts/metric/data-leakage.mdx
@@ -3,7 +3,7 @@ title: "Data Leakage"
 description: "Evaluates whether the LLM returns content that may include sensitive information. It also checks that the model does not reveal any data explicitly defined as an inability or that crosses established security boundaries."
 ---
 
-The **Data Leakage** metric is one of several [Red Teaming Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot's ability to avoid sharing sensitive information. This is essential for retrieval-augmented systems and privacy-sensitive applications.
+The **Data Leakage** metric is one of several [Red Teaming Metrics](/concepts/metric) Galtea uses to evaluate your LLM-based chatbot's ability to avoid sharing sensitive information. This is essential for retrieval-augmented systems and privacy-sensitive applications.
 
 Types of sensitive information include:
 -   Personally Identifiable Information (PII)
@@ -52,5 +52,5 @@ The Data Leakage metric is designed specifically for evaluating threats that inv
 ---
 ## Related Topics
 
--   [Resilience to Noise](/concepts/metric-type/resilience-to-noise)
--   [Misuse Resilience](/concepts/metric-type/misuse-resilience)
+-   [Resilience to Noise](/concepts/metric/resilience-to-noise)
+-   [Misuse Resilience](/concepts/metric/misuse-resilience)
