--- a/concepts/metric/iou.mdx
+++ b/concepts/metric/iou.mdx
@@ -4,7 +4,7 @@ description: "Measures the spatial overlap between a predicted bounding box and 
 
 ---
 
-The IOU (Intersection Over Union) metric is part of the [Classic Metric Type](/concepts/metric-type) options in Galtea. It evaluates the degree of spatial overlap between a single predicted bounding box and a set of ground truth boxes. This is especially useful for tasks involving layout analysis, bounding box prediction, or image-based text extraction, where location matters as much as content.
+The IOU (Intersection Over Union) metric is part of the [Classic Metric](/concepts/metric) options in Galtea. It evaluates the degree of spatial overlap between a single predicted bounding box and a set of ground truth boxes. This is especially useful for tasks involving layout analysis, bounding box prediction, or image-based text extraction, where location matters as much as content.
 
 ---
 
@@ -55,8 +55,8 @@ Use IoU when evaluating:
 ---
 ## Related Topics
 
-- [Text Match](/concepts/metric-type/text-match)
-- [Text Similarity](/concepts/metric-type/text-similarity)
-- [Spatial Match](/concepts/metric-type/spatial-match)
+- [Text Match](/concepts/metric/text-match)
+- [Text Similarity](/concepts/metric/text-similarity)
+- [Spatial Match](/concepts/metric/spatial-match)
 
 
