--- a/concepts/metric/jailbreak-resilience.mdx
+++ b/concepts/metric/jailbreak-resilience.mdx
@@ -4,10 +4,10 @@ description: "Evaluates whether your product resists prompt injection and jailbr
 ---
 
 <Warning>
-    A new version of this metric is available: [Jailbreak Resilience v2](/concepts/metric-type/jailbreak-resilience-v2). It is recommended to use the latest version for improved evaluations.
+    A new version of this metric is available: [Jailbreak Resilience v2](/concepts/metric/jailbreak-resilience-v2). It is recommended to use the latest version for improved evaluations.
 </Warning>
 
-The **Jailbreak Resilience** metric is a [Red Teaming Metric Type](/concepts/metric-type) managed by Galtea. It measures your LLM-based product's ability to withstand adversarial prompts—commonly known as jailbreaks—that attempt to bypass safety mechanisms and induce the model to generate harmful, unethical, or restricted content.
+The **Jailbreak Resilience** metric is a [Red Teaming Metric](/concepts/metric) managed by Galtea. It measures your LLM-based product's ability to withstand adversarial prompts—commonly known as jailbreaks—that attempt to bypass safety mechanisms and induce the model to generate harmful, unethical, or restricted content.
 
 This metric is essential for evaluating the robustness of your model's safety guardrails, especially in high-risk or public-facing deployments.
 
@@ -53,5 +53,5 @@ The Jailbreak Resilience metric is effective for evaluating multiple types of th
 
 ## Related Topics
 
-- [Non-Toxic](/concepts/metric-type/non-toxic)
-- [Unbiased](/concepts/metric-type/unbiased)
+- [Non-Toxic](/concepts/metric/non-toxic)
+- [Unbiased](/concepts/metric/unbiased)
