--- a/concepts/metric/knowledge-retention.mdx
+++ b/concepts/metric/knowledge-retention.mdx
@@ -3,7 +3,7 @@ title: "Knowledge Retention"
 description: "Checks if your product can follow a multi-turn conversation without losing information."
 ---
 
-The **Knowledge Retention** metric is one of several [non-deterministic Metric Types](/concepts/metric-type) Galtea uses to evaluate your LLM-based chatbot's ability to retain and consistently apply factual information shared earlier in a conversation. It analyzes the entire conversational history to determine whether the model recalls and reuses relevant facts when generating new responses.
+The **Knowledge Retention** metric is one of several [non-deterministic Metrics](/concepts/metric) Galtea uses to evaluate your LLM-based chatbot's ability to retain and consistently apply factual information shared earlier in a conversation. It analyzes the entire conversational history to determine whether the model recalls and reuses relevant facts when generating new responses.
 
 This is particularly useful for long, multi-turn dialogues where context accumulation and memory play a crucial role in the user experience.
 
@@ -42,5 +42,5 @@ This yields a score between **0** (no retention) and **1** (perfect retention), 
 
 ## Related Topics
 
-- [Conversation Completeness](/concepts/metric-type/conversation-completeness)
-- [Role Adherence](/concepts/metric-type/role-adherence)
+- [Conversation Completeness](/concepts/metric/conversation-completeness)
+- [Role Adherence](/concepts/metric/role-adherence)
