--- a/concepts/product/test/case.mdx
+++ b/concepts/product/test/case.mdx
@@ -21,9 +21,9 @@ You can **create**, view and manage your test cases on the [Galtea dashboard](ht
 
 ## Using Test Cases in Evaluations
 
-Test cases are used with [evaluation tasks](/concepts/product/version/session/evaluation-task). Sessions are created automatically when running evaluation tasks.
+Test cases are used with [evaluations](/concepts/product/version/session/evaluation). Sessions are created automatically when running evaluations.
 
-<Card title="Create an Evaluation Task" icon="badge-check" iconType="solid" href="/concepts/product/version/session/evaluation-task">
+<Card title="Create an Evaluation" icon="badge-check" iconType="solid" href="/concepts/product/version/session/evaluation">
   Learn how to use tests in evaluation tasks
 </Card>
 
