--- a/sdk/api/evaluation/create-single-turn.mdx
+++ b/sdk/api/evaluation/create-single-turn.mdx
@@ -4,7 +4,7 @@ description: "Create an evaluation task for a single-turn interaction, either fr
 ---
 
 ## Returns
-Returns a list of [EvaluationTask](/concepts/product/version/session/evaluation-task) objects, one for each metric provided.
+Returns a list of [Evaluation](/concepts/product/version/session/evaluation) objects, one for each metric provided.
 
 ## Usage
 This method is versatile and can be used for two main scenarios:
