--- a/sdk/api/metrics/list.mdx
+++ b/sdk/api/metrics/list.mdx
@@ -4,7 +4,7 @@ description: "List all metric types."
 ---
 
 ## Returns
-Returns a list of [MetricType](/concepts/metric-type) objects.
+Returns a list of [Metric](/concepts/metric) objects.
 
 ## Example
 ```python
